--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -25,13 +25,15 @@
         android:layout_width="245dp"
         android:layout_height="44dp" />
     
-    <ImageButton
-        android:contentDescription="@string/imageButton_login_desc"
+    <Button
         android:layout_marginTop="310dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/imageButton_login"
-        android:layout_width="180dp"
+        android:layout_width="184dp"
         android:layout_height="40dp"
-        android:background="@drawable/ic_launcher" />
+        android:background="@drawable/selector_login"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:text = "@string/button_login" />
     
 </RelativeLayout>
