--- a/res/layout/activity_result.xml
+++ b/res/layout/activity_result.xml
@@ -39,6 +39,8 @@
                 android:text="@string/cancel" /> 
             <Button 
                 style="?android:attr/buttonBarButtonStyle"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
                 android:layout_weight="1.0"
                 android:layout_width="wrap_content"  
                 android:layout_height="fill_parent"
